syntax = "proto3";

option csharp_namespace = "ApiGateway.Protos.BillService";

import "google/protobuf/timestamp.proto";

package bills;

service BillGrpcService {
  rpc CreateBill (CreateBillRequest) returns (CreateBillResponse);
  rpc GetBillById (GetBillByIdRequest) returns (GetBillByIdResponse);
  rpc UpdateBill (UpdateBillRequest) returns (UpdateBillResponse);
  rpc DeleteBill (DeleteBillRequest) returns (DeleteBillResponse);
  rpc GetAllBills (GetAllBillsRequest) returns (GetAllBillsResponse);
}

message UserData {
    string id = 1;
    string email = 2;
}

message Bill {
    string bill_id = 1;
    string user_id = 2;
    string bill_status = 3;
    int32 amount = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp payment_date = 6;
}

message CreateBillRequest {
    string user_id = 1;
    string bill_status = 2;
    int32 amount = 3;
    string user_email = 4;
}

message CreateBillResponse {
    Bill bill = 1;
}

message GetBillByIdRequest {
    string bill_id = 1;
    string user_id = 2;
    string user_role = 3;
    string user_email = 4;
}

message GetBillByIdResponse {
    Bill bill = 1;
}

message UpdateBillRequest {
    string bill_id = 1;
    string bill_status = 2;
    UserData user_data = 3;
}

message UpdateBillResponse {
    Bill bill = 1;
}

message DeleteBillRequest {
    string bill_id = 1;
    UserData user_data = 2;
}

message DeleteBillResponse {
    
}

message GetAllBillsRequest {
    string user_id = 1;
    string user_role = 2;
    optional string bill_status = 3;
    string user_email = 4;
}

message GetAllBillsResponse {
    repeated Bill bills = 1;
}